--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -35,7 +34,6 @@
         background-color: #050505;
         color: #e5e5e5;
       }
-      /* Custom scrollbar for cyber aesthetic */
       ::-webkit-scrollbar {
         width: 8px;
       }
@@ -57,15 +55,14 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5",
-    "express": "https://aistudiocdn.com/express@^5.1.0"
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <!-- Vite Entry Point -->
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
